--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     region: oregon
     branch: main
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
+    startCommand: uvicorn main_api:app --host 0.0.0.0 --port ${PORT:-8000}
     envVars:
       - key: CLAUDE_API_KEY
         sync: false
