Simplify FastAPI deployment

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ MAKE_WEBHOOK_SECRET=<random string>
 
 # Google API (future use)
 GOOGLE_API_SERVICE_ACCOUNT=<path or JSON>
+TANA_API_KEY=your-key-here
