--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ CLAUDE_API_KEY=<your Anthropic API key>
 
 # Deployment tokens
 VERCEL_TOKEN=<your Vercel deployment token>
+SUPABASE_SERVICE_KEY=<your Supabase service key>
+STRIPE_SECRET_KEY=<your Stripe secret key>
 
 # Make.com webhook security (optional)
 MAKE_WEBHOOK_SECRET=<random string>
