--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
 # API Keys for AI services
-OPENAI_API_KEY=<your OpenAI API key>
+OPENAI_API_KEY=sk-xxx
 CLAUDE_API_KEY=<your Anthropic API key>
+GEMINI_API_KEY=your-gemini-key
 
 # Deployment tokens
 VERCEL_TOKEN=<your Vercel deployment token>
-SUPABASE_SERVICE_KEY=<your Supabase service key>
+SUPABASE_SERVICE_KEY=your-key
 STRIPE_SECRET_KEY=<your Stripe secret key>
 
 # Make.com webhook security (optional)
