Add memory store, templates, RAG tasks and CLI

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ GEMINI_API_KEY=your-gemini-key
 # Deployment tokens
 VERCEL_TOKEN=<your Vercel deployment token>
 SUPABASE_SERVICE_KEY=your-key
+SUPABASE_URL=https://your-project.supabase.co
 STRIPE_SECRET_KEY=<your Stripe secret key>
 
 # Make.com webhook security (optional)
