Add encrypted secrets vault with Supabase

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ OPENAI_API_KEY=sk-xxx
 CLAUDE_API_KEY=<your Anthropic API key>
 GEMINI_API_KEY=your-gemini-key
 
+# Encryption key for secrets
+FERNET_SECRET=your-fernet-key
+
 # Deployment tokens
 VERCEL_TOKEN=<your Vercel deployment token>
 SUPABASE_SERVICE_KEY=your-key
