Add memory agents, GitHub trigger, retries and dashboard

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,13 @@ STRIPE_SECRET_KEY=<your Stripe secret key>
 # Make.com webhook security (optional)
 MAKE_WEBHOOK_SECRET=<random string>
 
+# GitHub webhook secret (optional)
+GITHUB_SECRET=your-github-secret
+
 # Google API (future use)
 GOOGLE_API_SERVICE_ACCOUNT=<path or JSON>
 TANA_API_KEY=your-key-here
+
+# Tags used by memory agents
+TANA_AUTO_TAG=auto_execute
+SUMMARY_TAG=summary_candidate
