Add agent planner, CLI executor and diagnostics

--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ SUPABASE_URL=https://your-project.supabase.co
 STRIPE_SECRET_KEY=<your Stripe secret key>
 
 # Make.com webhook security (optional)
-MAKE_WEBHOOK_SECRET=<random string>
+MAKE_WEBHOOK_SECRET=secure-make-token
 
 # GitHub webhook secret (optional)
 GITHUB_SECRET=your-github-secret
@@ -25,3 +25,6 @@ TANA_API_KEY=your-key-here
 # Tags used by memory agents
 TANA_AUTO_TAG=auto_execute
 SUMMARY_TAG=summary_candidate
+
+# Enable verbose debugging
+DEBUG_MODE=true
