Add conversational chat endpoints and planner

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,4 @@ SUMMARY_TAG=summary_candidate
 DEBUG_MODE=true
 
 AI_ROUTER_MODE=auto
+CHAT_SYSTEM_PROMPT=You are BrainOps Operator, a fast, reliable assistant for project execution.
