Add voice upload and optimization tasks

--- a/.env.example
+++ b/.env.example
@@ -30,4 +30,6 @@ SUMMARY_TAG=summary_candidate
 DEBUG_MODE=true
 
 AI_ROUTER_MODE=auto
+WHISPER_MODEL_SIZE=base
+VOICE_UPLOAD_DIR=uploads/
 CHAT_SYSTEM_PROMPT=You are BrainOps Operator, a fast, reliable assistant for project execution.
