Add voice sync endpoints and deploy watcher

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,11 @@ TANA_API_KEY=your-key-here
 TANA_AUTO_TAG=auto_execute
 SUMMARY_TAG=summary_candidate
 
+# Deployment sync watcher
+GITHUB_DEPLOY_HASH_KEY=
+TANA_NODE_CALLBACK=true
+VOICE_UPLOAD_RETENTION_DAYS=30
+
 # Enable verbose debugging
 DEBUG_MODE=true
 
