Implement memory lineage and voice trace features

--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,5 @@ AI_ROUTER_MODE=auto
 WHISPER_MODEL_SIZE=base
 VOICE_UPLOAD_DIR=uploads/
 CHAT_SYSTEM_PROMPT=You are BrainOps Operator, a fast, reliable assistant for project execution.
+TRACE_FEEDBACK_ENABLED=true
+TRACE_VIEW_LIMIT=50
