Add agent inbox and mobile dashboard features

--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,7 @@ VOICE_UPLOAD_DIR=uploads/
 CHAT_SYSTEM_PROMPT=You are BrainOps Operator, a fast, reliable assistant for project execution.
 TRACE_FEEDBACK_ENABLED=true
 TRACE_VIEW_LIMIT=50
+
+# Agent inbox settings
+INBOX_SUPABASE_TABLE=agent_inbox
+INBOX_SUMMARIZER_MODEL=claude
