Add mobile scheduler and calendar-aware agents

--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,7 @@ TRACE_VIEW_LIMIT=50
 # Agent inbox settings
 INBOX_SUPABASE_TABLE=agent_inbox
 INBOX_SUMMARIZER_MODEL=claude
+PUSH_WEBHOOK_URL=https://...
+PUSH_DEVICE_ID=
+DAILY_PLAN_TIME=07:00
+INBOX_ALERT_THRESHOLD=3
