Add task scheduling and retry features

--- a/.env.example
+++ b/.env.example
@@ -48,3 +48,7 @@ PUSH_WEBHOOK_URL=https://...
 PUSH_DEVICE_ID=
 DAILY_PLAN_TIME=07:00
 INBOX_ALERT_THRESHOLD=3
+RECURRING_TASK_CHECK_INTERVAL=30
+RETRY_FAILURE_LIMIT=3
+CLAUDE_WEEKLY_PRIORITY_DAY=Sunday
+CLAUDE_WEEKLY_PRIORITY_TIME=16:00
