Add weekly forecast and strategy planning features

--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,7 @@ RECURRING_TASK_CHECK_INTERVAL=30
 RETRY_FAILURE_LIMIT=3
 CLAUDE_WEEKLY_PRIORITY_DAY=Sunday
 CLAUDE_WEEKLY_PRIORITY_TIME=16:00
+FORECAST_PLANNER_ENABLED=true
+WEEKLY_STRATEGY_DAY=Sunday
+DAILY_PLANNER_MODEL=claude
+ESCALATION_CHECK_INTERVAL=1800
