Add knowledge retrieval agent with RAG endpoints

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,10 @@ GITHUB_SECRET=your-github-secret
 # Google API (future use)
 GOOGLE_API_SERVICE_ACCOUNT=<path or JSON>
 TANA_API_KEY=your-key-here
+NOTION_API_KEY=
+NOTION_DB_ID=
+RAG_INDEX_ENABLED=true
+KNOWLEDGE_DOC_DIR=data/docs/
 
 # Tags used by memory agents
 TANA_AUTO_TAG=auto_execute
