feat: finalize api lifespan and timezone handling

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 OPENAI_API_KEY=sk-xxx
 CLAUDE_API_KEY=<your Anthropic API key>
 GEMINI_API_KEY=your-gemini-key
+ENVIRONMENT=development
 
 # Encryption key for secrets
 FERNET_SECRET=your-fernet-key
