Cleanup dashboard UI config and add tests

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
 # API Keys for AI services
 OPENAI_API_KEY=sk-xxx
 CLAUDE_API_KEY=<your Anthropic API key>
+CHATGPT_API_KEY=
 GEMINI_API_KEY=your-gemini-key
+API_BASE=https://brainops-operator.onrender.com
 ENVIRONMENT=development
 
 # Encryption key for secrets
@@ -61,3 +63,4 @@ FORECAST_PLANNER_ENABLED=true
 WEEKLY_STRATEGY_DAY=Sunday
 DAILY_PLANNER_MODEL=claude
 ESCALATION_CHECK_INTERVAL=1800
+CLAUDE_LOG_FOLDER_ID=
