--- a/dashboard_ui/package.json
+++ b/dashboard_ui/package.json
@@ -4,21 +4,25 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "export": "next export -o ../static/dashboard",
+    "build": "next build && next export",
     "start": "next start"
   },
   "dependencies": {
-    "next": "13.5.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "^3.4.5",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.25",
-    "framer-motion": "^10.16.2",
-    "recharts": "^2.7.2",
     "@radix-ui/react-popover": "^1.0.4",
     "@radix-ui/react-toast": "^1.0.4",
-    "clsx": "^2.1.0"
+    "autoprefixer": "^10.4.14",
+    "clsx": "^2.1.0",
+    "framer-motion": "^10.16.2",
+    "next": "^13.4.19",
+    "postcss": "^8.4.25",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "recharts": "^2.7.2",
+    "tailwindcss": "^3.4.5"
+  },
+  "devDependencies": {
+    "@types/node": "^18.19.29",
+    "@types/react": "^18.2.44",
+    "typescript": "^5.3.3"
   }
 }
