--- a/dashboard_ui/package.json
+++ b/dashboard_ui/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start"
   },
   "dependencies": {
@@ -18,7 +18,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.7.2",
-    "tailwindcss": "^3.4.5"
+    "tailwindcss": "^3.4.5",
+    "@supabase/supabase-js": "^2.39.7"
   },
   "devDependencies": {
     "@types/node": "^18.19.29",
