--- a/dashboard_ui/public/manifest.json
+++ b/dashboard_ui/public/manifest.json
@@ -1,20 +1,15 @@
 {
-  "name": "FastAPI Operator Dashboard",
-  "short_name": "Operator",
-  "start_url": "/static/dashboard/index.html",
+  "name": "BrainOps Assistant",
+  "short_name": "BrainOps",
+  "start_url": "/copilot-app",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#0f172a",
+  "background_color": "#000000",
+  "theme_color": "#1f2937",
   "icons": [
     {
-      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='20' ry='20' fill='%230f172a'/%3E%3Ctext x='50' y='65' font-size='60' text-anchor='middle' fill='%23ffffff'%3E%E2%9A%99%EF%B8%8F%3C/text%3E%3C/svg%3E",
+      "src": "/icon-192.png",
       "sizes": "192x192",
-      "type": "image/svg+xml"
-    },
-    {
-      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='20' ry='20' fill='%230f172a'/%3E%3Ctext x='50' y='65' font-size='60' text-anchor='middle' fill='%23ffffff'%3E%E2%9A%99%EF%B8%8F%3C/text%3E%3C/svg%3E",
-      "sizes": "512x512",
-      "type": "image/svg+xml"
+      "type": "image/png"
     }
   ]
 }
