Add publishing automation tasks

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,13 @@ STRIPE_SECRET_KEY=<your Stripe secret key>
 
 # Make.com webhook security (optional)
 MAKE_WEBHOOK_SECRET=secure-make-token
+BRAINSTACK_API_URL=https://your-site/api
+BRAINSTACK_API_KEY=
+MAKE_PUBLISH_WEBHOOK=https://hook.make.com/xxx
+MAKE_SALE_WEBHOOK=https://hook.make.com/yyy
+NEWSLETTER_API_URL=
+NEWSLETTER_API_KEY=
+DOCS_WEBHOOK_URL=
 
 # GitHub webhook secret (optional)
 GITHUB_SECRET=your-github-secret
