--- a/alembic.ini
+++ b/alembic.ini
@@ -1,3 +1,3 @@
 [alembic]
-script_location = alembic
-sqlalchemy.url = sqlite:///./app.db
+script_location = migrations
+sqlalchemy.url = env:DATABASE_URL
