Add external integration stubs and webhooks

--- a/.env.example
+++ b/.env.example
@@ -71,3 +71,8 @@ WEEKLY_STRATEGY_DAY=Sunday
 DAILY_PLANNER_MODEL=claude
 ESCALATION_CHECK_INTERVAL=1800
 CLAUDE_LOG_FOLDER_ID=
+
+# Integration secrets
+STRIPE_WEBHOOK_SECRET=
+SLACK_SIGNING_SECRET=
+CLICKUP_API_TOKEN=
