--- a/render.yaml
+++ b/render.yaml
@@ -13,3 +13,27 @@ services:
     autoDeploy: true
     env: python
     pythonVersion: 3.11
+
+  - type: worker
+    name: operator-worker
+    runtime: python
+    plan: free
+    region: oregon
+    branch: main
+    buildCommand: pip install -r requirements.txt
+    startCommand: celery -A celery_app worker --loglevel=info
+    envVars:
+      - key: CLAUDE_API_KEY
+        sync: false
+      - key: REDIS_URL
+        fromService:
+          type: redis
+          name: operator-redis
+          property: connectionString
+    autoDeploy: true
+    env: python
+    pythonVersion: 3.11
+
+  - type: redis
+    name: operator-redis
+    ipAllowList: []
