--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -14,6 +14,13 @@ services:
       - .:/app
     environment:
       REDIS_URL: redis://redis:6379/0
+  beat:
+    build: .
+    command: celery -A celery_app beat --loglevel=info
+    volumes:
+      - .:/app
+    environment:
+      REDIS_URL: redis://redis:6379/0
   redis:
     image: redis:7-alpine
     ports:
