--- a/render.yaml
+++ b/render.yaml
@@ -21,7 +21,7 @@ services:
     region: oregon
     branch: main
     buildCommand: pip install -r requirements.txt
-    startCommand: celery -A celery_app worker --loglevel=info
+    startCommand: celery -A celery_app worker --loglevel=info -B
     envVars:
       - key: CLAUDE_API_KEY
         sync: false
