--- a/brainops-ai-assistant/frontend/package.json
+++ b/brainops-ai-assistant/frontend/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.6",
+    "idb": "^8.0.3",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
     "react": "19.1.0",
