--- a/brainops-ai-assistant/backend/.env.example
+++ b/brainops-ai-assistant/backend/.env.example
@@ -1,39 +1,58 @@
-# Database Configuration
-DATABASE_URL=postgresql://username:password@localhost/brainops_ai
-REDIS_URL=redis://localhost:6379
-
-# API Keys
-OPENAI_API_KEY=your_openai_api_key_here
-ANTHROPIC_API_KEY=your_anthropic_api_key_here
-ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
-
-# Security
-SECRET_KEY=your_super_secret_key_here
-JWT_SECRET_KEY=your_jwt_secret_key_here
-JWT_ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=1440
-
-# Application Settings
+# Core Application Settings
+PORT=8000
+SECRET_KEY=your_super_secret_key_here_change_this_in_production
 DEBUG=false
 LOG_LEVEL=INFO
-MAX_UPLOAD_SIZE=52428800
-ENABLE_VOICE_INTERFACE=true
-ENABLE_FILE_OPERATIONS=true
-ENABLE_WORKFLOW_AUTOMATION=true
 
-# CORS Settings
-CORS_ALLOWED_ORIGINS=["http://localhost:3000","https://your-frontend-domain.com"]
+# Database Configuration
+DATABASE_URL=postgresql://username:password@localhost:5432/brainops_ai
+REDIS_URL=redis://localhost:6379/0
 
-# File Storage
-UPLOAD_DIR=./uploads
-MAX_FILE_SIZE_MB=50
+# AI Service API Keys (Required)
+OPENAI_API_KEY=sk-your_openai_api_key_here
+ANTHROPIC_API_KEY=sk-ant-your_anthropic_api_key_here
 
-# AI Model Settings
-DEFAULT_AI_MODEL=gpt-4-turbo-preview
+# Optional AI Services
+GOOGLE_AI_API_KEY=your_google_ai_api_key_here
+ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
+
+# Security & Authentication
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=1440
+REQUIRE_CONFIRMATION=true
+ENABLE_2FA=true
+MAX_LOGIN_ATTEMPTS=5
+
+# File Operations
+OPS_ROOT_DIR=/home/brainops/operations
+MAX_FILE_SIZE_MB=100
+COMMAND_TIMEOUT_SECONDS=300
+
+# Voice Configuration
+WHISPER_MODEL=base
+VOICE_ACTIVATION_KEYWORD=hey brain
+VOICE_LANGUAGE=en-US
+VOICE_CONFIDENCE_THRESHOLD=0.5
+
+# Integration Services (Optional)
+MAKE_WEBHOOK_URL=https://hook.make.com/your-webhook-id
+CLICKUP_API_TOKEN=pk_your_clickup_token
+NOTION_API_KEY=secret_your_notion_integration_key
+
+# Task Management
+TASK_QUEUE_NAME=brainops_tasks
+MAX_CONCURRENT_TASKS=10
+
+# Memory & Knowledge Base
+MEMORY_COLLECTION_NAME=assistant_memory
+MAX_MEMORY_ENTRIES=10000
 EMBEDDING_MODEL=text-embedding-3-small
-MAX_CONTEXT_LENGTH=8000
 
-# Rate Limiting
-RATE_LIMIT_ENABLED=true
-RATE_LIMIT_REQUESTS=100
-RATE_LIMIT_PERIOD=60
+# CORS Configuration
+ALLOWED_ORIGINS=["http://localhost:3000","http://localhost:3001","https://app.brainops.ai"]
+
+# Monitoring (Optional)
+SENTRY_DSN=https://your-sentry-dsn@sentry.io/project-id
+
+# Audit & Compliance
+AUDIT_LOG_RETENTION_DAYS=90
