--- a/brainops-ai-assistant/backend/Dockerfile
+++ b/brainops-ai-assistant/backend/Dockerfile
@@ -10,6 +10,10 @@ RUN apt-get update && apt-get install -y \
     g++ \
     postgresql-client \
     curl \
+    libportaudio2 \
+    libportaudiocpp0 \
+    portaudio19-dev \
+    ffmpeg \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first for better caching
@@ -25,12 +29,15 @@ COPY . .
 RUN useradd -m -u 1000 appuser && chown -R appuser:appuser /app
 USER appuser
 
-# Expose port
+# Environment variable for port (default 8000, can be overridden)
+ENV PORT=8000
+
+# Expose port (use numeric value for better compatibility)
 EXPOSE 8000
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-    CMD curl -f http://localhost:8000/api/health || exit 1
+    CMD curl -f http://localhost:${PORT}/api/health || exit 1
 
 # Run the application
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port ${PORT}"]
