--- a/brainops-ai-assistant/frontend/Dockerfile
+++ b/brainops-ai-assistant/frontend/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /app
 
 # Install dependencies based on the preferred package manager
 COPY package.json package-lock.json* ./
-RUN npm ci --omit=dev
+RUN npm ci --include=dev
 
 # Rebuild the source code only when needed
 FROM base AS builder
@@ -34,9 +34,16 @@ COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
 USER nextjs
 
+# Expose port (use numeric value)
 EXPOSE 3000
 
+# Environment variables for port configuration
 ENV PORT 3000
 ENV HOSTNAME "0.0.0.0"
 
+# Health check for Next.js application
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+    CMD node -e "require('http').get('http://localhost:' + process.env.PORT + '/api/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1); }).on('error', () => { process.exit(1); })"
+
+# Start the Next.js server
 CMD ["node", "server.js"]
