--- a/brainops-ai-assistant/frontend/package.json
+++ b/brainops-ai-assistant/frontend/package.json
@@ -19,7 +19,7 @@
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.6",
-    "idb": "^8.0.3",
+    "idb": "^7.1.1",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
     "react": "19.1.0",
@@ -34,14 +34,17 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/serviceworker": "^0.0.95",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
-    "tailwindcss": "^4",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5"
   }
 }
