Fix imports and add stubs for startup

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ TIMEZONE="UTC"
 # Security
 SECRET_KEY="your-secret-key-here-change-in-production"
 API_KEYS=""  # Comma-separated list of valid API keys
+COST_THRESHOLD_USD="100"
+ACCESS_TOKEN_EXPIRE_MINUTES="30"
+REFRESH_TOKEN_EXPIRE_DAYS="7"
 CORS_ORIGINS='["http://localhost:3000","http://localhost:8000"]'
 
 # Database
@@ -24,6 +27,8 @@ SUPABASE_DB_URL="postgresql://postgres:password@db.your-project.supabase.co:5432
 OPENAI_API_KEY=""
 ANTHROPIC_API_KEY=""
 CLAUDE_API_KEY=""  # Same as ANTHROPIC_API_KEY
+GOOGLE_AI_API_KEY=""
+EMBEDDING_MODEL="text-embedding-3-small"
 
 # Integrations
 CLICKUP_API_TOKEN=""
@@ -33,14 +38,20 @@ GITHUB_TOKEN=""
 SLACK_BOT_TOKEN=""
 SLACK_WEBHOOK_URL=""
 SLACK_ALERT_CHANNEL="#alerts"
+CLICKUP_WEBHOOK_SECRET=""
 
 # Stripe
 STRIPE_API_KEY_LIVE=""
 STRIPE_API_KEY_TEST=""
 STRIPE_WEBHOOK_SECRET=""
+STRIPE_SECRET_KEY=""
 
 # Other Services
 AIRTABLE_API_KEY=""
 RESEND_API_KEY=""
 PERPLEXITY_API_KEY=""
 MAKE_WEBHOOK_URL=""
+MAKE_WEBHOOK_SECRET=""
+MAKE_WEBHOOK_BASE_URL=""
+MAKE_WEBHOOK_SECRETS="{}"
+GENERIC_WEBHOOK_INTEGRATIONS="{}"
