--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,7 @@ requests==2.31.0
 python-dotenv==1.0.0
 pyyaml==6.0.1
 orjson==3.9.10  # Fast JSON parsing
-httpx==0.25.2
+httpx==0.27.0
 tenacity==8.2.3  # Retry logic
 
 # Monitoring & Logging
@@ -72,4 +72,4 @@ pre-commit==3.6.0
 # Documentation
 mkdocs==1.5.3
 mkdocs-material==9.5.4
-pydoc-markdown==4.8.2
+pydoc-markdown==4.8.2PyGithub==1.59.1
