--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ sqlalchemy==2.0.25
 alembic==1.13.1
 asyncpg==0.29.0
 psycopg2-binary==2.9.9
-supabase==2.3.4
+supabase>=2.16.0
 
 # Vector Database & Embeddings
 pgvector==0.2.4
