--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ sqlalchemy==2.0.25
 alembic==1.13.1
 asyncpg==0.29.0
 psycopg2-binary==2.9.9
-supabase>=2.16.0
+supabase==2.16.0
 
 # Vector Database & Embeddings
 pgvector==0.2.4
@@ -51,7 +51,7 @@ requests==2.31.0
 python-dotenv==1.0.0
 pyyaml==6.0.1
 orjson==3.9.10  # Fast JSON parsing
-httpx==0.25.2
+httpx>=0.26,<0.29
 tenacity==8.2.3  # Retry logic
 
 # Monitoring & Logging
