chore: finalize prod env setup

--- a/.env.example
+++ b/.env.example
@@ -49,9 +49,48 @@ STRIPE_SECRET_KEY=""
 # Other Services
 AIRTABLE_API_KEY=""
 RESEND_API_KEY=""
-PERPLEXITY_API_KEY=""
 MAKE_WEBHOOK_URL=""
 MAKE_WEBHOOK_SECRET=""
 MAKE_WEBHOOK_BASE_URL=""
 MAKE_WEBHOOK_SECRETS="{}"
+
 GENERIC_WEBHOOK_INTEGRATIONS="{}"
+# Additional Settings
+API_V1_PREFIX="/api/v1"
+CLICKUP_API_KEY=""
+CLICKUP_DEFAULT_LIST_ID=""
+CLICKUP_ESTIMATE_LIST_ID=""
+CLICKUP_FOLDER_IDS="{}"
+EMAIL_ALERT_RECIPIENTS=""
+ENABLE_SLACK_ALERTS="true"
+ENABLE_EMAIL_ALERTS="true"
+ENABLE_HEALTH_CHECKS="true"
+ENABLE_AUTO_DEPLOY="false"
+ENABLE_WEBHOOK_ALERTS="true"
+ENABLE_PERFORMANCE_MONITORING="true"
+ENABLE_AI_MONITORING="true"
+ERROR_THRESHOLD="5"
+ERROR_WINDOW_MINUTES="5"
+ALERT_COOLDOWN_MINUTES="15"
+RESPONSE_TIME_THRESHOLD_MS="5000"
+MAX_WEBHOOK_RETRIES="3"
+FERNET_SECRET=""
+JWT_SECRET=""
+GITHUB_REPOS=""
+NOTION_API_KEY=""
+NOTION_DATABASE_IDS="{}"
+NOTION_TASKS_DB_ID=""
+NOTION_KNOWLEDGE_DB_ID=""
+NOTION_ESTIMATES_DB_ID=""
+RENDER_API_KEY=""
+RENDER_SERVICE_IDS="{}"
+SENTRY_DSN=""
+SLACK_SIGNING_SECRET=""
+SLACK_DEFAULT_CHANNEL="#general"
+SLACK_APPROVAL_CHANNEL=""
+SUPABASE_SERVICE_KEY=""
+SUPABASE_DB_PASSWORD=""
+VERCEL_TOKEN=""
+VERCEL_TEAM_ID=""
+AIRTABLE_BASE_IDS="{}"
+
