--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -62,4 +62,4 @@ EXPOSE ${PORT}
 
 # Start the FastAPI application with Uvicorn
 # Use exec form to ensure proper signal handling
-CMD ["uvicorn", "apps.backend.main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "2"]
+CMD ["uvicorn", "apps.backend.main:app", "--host", "0.0.0.0", "--port", "$PORT", "--workers", "2"]
