--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -61,5 +61,4 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
 EXPOSE ${PORT}
 
 # Start the FastAPI application with Uvicorn
-# Use exec form to ensure proper signal handling
-CMD ["uvicorn", "apps.backend.main:app", "--host", "0.0.0.0", "--port", "$PORT", "--workers", "2"]
+CMD uvicorn apps.backend.main:app --host 0.0.0.0 --port $PORT --workers 2
