--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 bcrypt==4.1.2
 cryptography==41.0.7
+pyotp==2.9.0  # Two-factor authentication
 
 # Task Scheduling
 apscheduler==3.10.4
@@ -46,6 +47,7 @@ stripe==7.8.0
 slack-sdk==3.26.2
 notion-client==2.2.0
 requests==2.31.0
+aiosmtplib==3.0.1  # Async email sending
 
 # Utilities
 python-dotenv==1.0.0
@@ -53,6 +55,9 @@ pyyaml==6.0.1
 orjson==3.9.10  # Fast JSON parsing
 httpx==0.27.0
 tenacity==8.2.3  # Retry logic
+psutil==5.9.8  # System monitoring
+colorama==0.4.6  # Colored terminal output
+boto3==1.34.14  # AWS SDK (for S3, etc.)
 
 # Monitoring & Logging
 structlog==24.1.0
