--- a/render.yaml
+++ b/render.yaml
@@ -5,8 +5,7 @@ services:
     runtime: docker
     plan: starter
     region: oregon
-    dockerfilePath: ./Dockerfile
-    dockerContext: .
+    image: mwwoodworth/brainops-backend:latest
     healthCheckPath: /health
     envVars:
       - key: OPENAI_API_KEY
@@ -35,8 +34,6 @@ services:
       - key: CLICKUP_API_TOKEN
         sync: false
     autoDeploy: true
-    env: python
-    pythonVersion: 3.11
 
   # Background Worker (commented out until celery_app is properly configured)
   # - type: worker
